# RankingScript

./: CMakeLists.txt  ConfigReader.h  NewbieContestRanking.cpp  README.md  RankingPrinter.cpp  RankingScript.h  RootMeRanking.cpp  RootMeRanking.h  TODO.txt  doc.txt  main.cpp
src/: main.cpp
src/config/: ConfigReader.cpp
src/newbiecontest/: NewbieContestRanking.h  NewbieContestUser.cpp  NewbieContestUser.h
src/ranking/: RankingConfig.cfg  RankingPrinter.h  RankingScript.cpp  RankingScript.h
src/rootme/: RootMeStats.cpp  RootMeStats.h
